# condense-json

./: pyproject.toml
condense_json/: __init__.py
tests/: test_condense_json.py  test_uncondense_json.py
