[project]
name = "condense-json"
version = "0.1"
description = "Python function for condensing JSON using replacement strings"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/condense-json"
Changelog = "https://github.com/simonw/condense-json/releases"
Issues = "https://github.com/simonw/condense-json/issues"
CI = "https://github.com/simonw/condense-json/actions"


[project.optional-dependencies]
test = ["pytest"]
