[project]
name = "condense-json"
version = "0.1.3"
description = "Python function for condensing JSON using replacement strings"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = [
    "Typing :: Typed"
]
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/condense-json"
Changelog = "https://github.com/simonw/condense-json/releases"
Issues = "https://github.com/simonw/condense-json/issues"
CI = "https://github.com/simonw/condense-json/actions"


[project.optional-dependencies]
test = ["pytest", "mypy"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
